Refactor multi-vendor to single-vendor platform